# SA-Finance-Lakehouse

./: README.md  pyproject.toml
airflow/: practice.py
airflow/config/: airflow.cfg
data_generation/: generate_customers.py  generate_transactions.py
data_generator/: generate_accounts.py  generate_customers.py  generate_transactions.py
database/: create_tables.sql  indexes.sql
etl/: load_to_postgres.py  validate_data.py
scripts/: generate_accounts.py  generate_transactions.py
src/: config.py
src/etl/: load.py  validate.py
