[project]
name = "SA-Banking-Transaction-ETL-Fraud-Detection-Pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
