[project]
name = "SA-Banking-Transaction-ETL-Fraud-Detection-Pipeline"
version = "0.1.0"
description = "End-to-end banking ETL pipeline for transaction validation, fraud detection, PostgreSQL analytics, and Apache Airflow orchestration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=3.3.0",
    "faker>=40.28.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
